исправлено замечание по критерию Д7
заменены селекторы вида reasons-list>li:nth-of-type(1) на селекторы по классу

--- a/hotels.html
+++ b/hotels.html
@@ -31,20 +31,20 @@
           <fieldset class="search__block-item">
             <legend class="search__block-legend">Инфраструктура:</legend>
             <input id="swim" class="search__input-checkbox visually-hidden" type="checkbox" name="swim" checked>
-            <label for="swim">Бассейн</label>
+            <label class="search__input-checkbox-label" for="swim">Бассейн</label>
             <input id="parking" class="search__input-checkbox visually-hidden" type="checkbox" name="parking">
-            <label for="parking">Парковка</label>
+            <label class="search__input-checkbox-label" for="parking">Парковка</label>
             <input id="wifi" class="search__input-checkbox visually-hidden" type="checkbox" name="wifi">
-            <label for="wifi">Wi-Fi</label>
+            <label class="search__input-checkbox-label" for="wifi">Wi-Fi</label>
           </fieldset>
           <fieldset class="search__block-item">
             <legend class="search__block-legend">Тип жилья:</legend>
             <input id="hotel" class="search__input-checkbox visually-hidden" type="checkbox" name="wifi" checked>
-            <label for="hotel">Гостиница</label>
+            <label class="search__input-checkbox-label" for="hotel">Гостиница</label>
             <input id="motel" class="search__input-checkbox visually-hidden" type="checkbox" name="motel" checked>
-            <label for="motel">Мотель</label>
+            <label class="search__input-checkbox-label" for="motel">Мотель</label>
             <input id="apart" class="search__input-checkbox visually-hidden" type="checkbox" name="apart" checked>
-            <label for="apart">Апартаменты</label>
+            <label class="search__input-checkbox-label" for="apart">Апартаменты</label>
           </fieldset>
           <fieldset class="search__block-item">
             <legend class="search__block-legend">Стоимость в стуки (р):</legend>
