--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </ul>
           </li>
           <li class="reasons-list__item reasons-list__item--right">
-            <div class="item-container">
+            <div class="item-container item-container--right">
               <h3 class="item-header">Там есть Мост&nbsp;дьявола</h3>
               <p class="item-number">— №2 —</p>
               <p class="item-content">Да, по&nbsp;нему можно пройти! Если конечно вы&nbsp;осмелитесь</p>
