исправлены замечания по критерию Б15

--- a/hotels.html
+++ b/hotels.html
@@ -51,11 +51,11 @@
             <div class="search__range-filter">
               <div class="search__price-controls">
                 <label class="search__min-price">
-              от <input type="number" name="min-price" value="0">
-            </label>
+                  от <input type="number" name="min-price" value="0">
+                </label>
                 <label class="search__max-price">
-              до <input type="number" name="max-price" value="3000">
-            </label>
+                  до <input type="number" name="max-price" value="3000">
+                </label>
               </div>
               <div class="search__range-controls">
                 <div class="search__scale">
@@ -144,20 +144,26 @@
           <li class="social-list__item">
             <a class="social-list__link" aria-label="Твиттер" href="#">
               <span class="visually-hidden">Твиттер</span>
-              <svg width="17" height="16" aria-hidden="true" focusable="false" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M10.95 1.14a3.1 3.1 0 013.58 1.18c.67-.23 1.33-.48 2-.7a2.34 2.34 0 01-.85 1.76c.69.17 1.3-.49 1.3-.49-.16 1-1
+              <svg width="17" height="16" aria-hidden="true" focusable="false" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M10.95 1.14a3.1 3.1 0 013.58 1.18c.67-.23 1.33-.48 2-.7a2.34 2.34 0 01-.85 1.76c.69.17 1.3-.49 1.3-.49-.16 1-1
               1.79-1.56 2.03C15.2 11.67 12.25 16.13 5.34 16H4.9c-.41 0-4.17-.46-4.9-1.89 2.27.2 3.9-.42 4.7-1.18-.97-.3-2.69-.47-2.99-2.95.35.11.57.23 1.2.12C1.7 9.25.36 8.53.44 6.33a1.9 1.9 0 001.34.47c-.7-.24-1.97-3.36-.9-4.95 1.82 1.85 3.74 3.6 7.16
-              3.77.2-2.29 1.13-3.83 2.9-4.48z" fill="#fff"/></svg>
+              3.77.2-2.29 1.13-3.83 2.9-4.48z" fill="#fff"/>
+              </svg>
             </a>
           </li>
           <li class="social-list__item">
             <a class="social-list__link" aria-label="Фейсбук" href="#">
-              <svg width="12" height="22" aria-hidden="true" focusable="false" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M12 4V0H8a4 4 0 00-4 4v4H0v4h4v10h4V12h4V8H8V4h4z" fill="#fff"/></svg>
+              <svg width="12" height="22" aria-hidden="true" focusable="false" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M12 4V0H8a4 4 0 00-4 4v4H0v4h4v10h4V12h4V8H8V4h4z" fill="#fff"/>
+              </svg>
             </a>
           </li>
           <li class="social-list__item">
             <a class="social-list__link" aria-label="Ютуб" href="#">
-              <svg width="20" height="16" aria-hidden="true" focusable="false" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M3 0h14a3 3 0 013 3v10a3 3 0 01-3 3H3a3 3 0 01-3-3V3a3 3 0 013-3zm3.03
-              4v8L15 8 6.03 4z" fill="#fff"/></svg>
+              <svg width="20" height="16" aria-hidden="true" focusable="false" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M3 0h14a3 3 0 013 3v10a3 3 0 01-3 3H3a3 3 0 01-3-3V3a3 3 0 013-3zm3.03
+              4v8L15 8 6.03 4z" fill="#fff"/>
+              </svg>
             </a>
           </li>
         </ul>
@@ -185,8 +191,8 @@
               2.332-.378v-1.726a4.647 4.647 0 01-1.783.356c-1.14 0-1.667-.389-1.667-1.575V7.513h3.165V5.787H52.69zm5.697 8.966V5.754h1.752v1.08a3.983 3.983 0 012.922-1.382 2.998 2.998 0 012.743 1.435c.793-.882 1.9-1.4 3.07-1.435.94-.037 1.85.347 2.491 1.052.64.704.949
               1.66.843 2.617v5.62h-2.004V9.186a1.743 1.743 0 00-.366-1.262 1.668 1.668 0 00-1.132-.626h-.243a2.937 2.937 0 00-2.184 1.209v6.236h-2.005V9.185a1.742 1.742 0 00-.365-1.262 1.667 1.667 0 00-1.133-.626h-.242A3.153 3.153 0 0060.2 8.69v6.074h-1.815v-.01zm-29.689
               14.55l.01-.006-.01.021v-.015zm0-11.983v11.983l-13.346 8.13-13.346-8.115V17.515l13.283 8.092v1.424l-9.105-5.503v1.414l9.157 5.621v1.5l-9.147-5.567v1.456l9.158 5.621 9.232-5.653v-6.107l4.114-2.492zm.01-1.542l-3.67 2.158-1.689 1.079-8.04-4.931v1.413l6.848
-              4.23-.148.097-1.055.582-5.665-3.452v1.445l4.473 2.72-1.055.722-3.376-2.05v1.414l2.215 1.338-2.247 1.36L2.11 15.863 15.31 7.729l13.399 8.049zm-13.42-9.506l13.42 8.081V3.563L15.362 2.13 2.015 3.564v10.79l13.273-8.082z"
-                fill="#231F20" /></svg>
+              4.23-.148.097-1.055.582-5.665-3.452v1.445l4.473 2.72-1.055.722-3.376-2.05v1.414l2.215 1.338-2.247 1.36L2.11 15.863 15.31 7.729l13.399 8.049zm-13.42-9.506l13.42 8.081V3.563L15.362 2.13 2.015 3.564v10.79l13.273-8.082z" fill="#231F20"/>
+            </svg>
           </a>
         </p>
       </section>
