исправлены замечания критерия Б16
формат изображения карты поменян с jpg на png

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
     </footer>
   </div>
   <script src="js/script.min.js"></script>
-  <script src="https://maps.googleapis1.com/maps/api/js?key=AIzaSyDVO0jnpeT5nMOzS9LEG1srk2lchp4LMug&callback=mainMap" async defer></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDVO0jnpeT5nMOzS9LEG1srk2lchp4LMug&callback=mainMap" async defer></script>
 </body>
 
 </html>
