фильтр сортировки - исправлено переполнение

--- a/hotels.html
+++ b/hotels.html
@@ -26,7 +26,6 @@
     </header>
     <main class="content-container">
       <div class="substrate">
-
         <form class="search centering-content" action="https://echo.htmlacademy.ru/" method="get">
           <fieldset class="search__block-item">
             <legend class="search__block-legend">Инфраструктура:</legend>
@@ -46,7 +45,7 @@
             <input id="apart" class="search__input-checkbox visually-hidden" type="checkbox" name="apart" checked>
             <label class="search__input-checkbox-label" for="apart">Апартаменты</label>
           </fieldset>
-          <fieldset class="search__block-item">
+          <fieldset class="search__block-item search__block-item--coast-filter">
             <legend class="search__block-legend">Стоимость в стуки (р):</legend>
             <div class="search__range-filter">
               <div class="search__price-controls">
