добавлена дрожание окна на ошибку в форме

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <button type="button" class="search-form__input-btn search-form__input-btn--sub" id="adult__input-btn--sub" name="adult__input-btn--sub">
               <span class="search-form__input-btn--sub-img"></span>
             </button>
-            <input id="search-form__adults" type="number" name="adults" min="0" value="2">
+            <input id="search-form__adults" type="number" name="adults" min="1" value="2">
             <button type="button" class="search-form__input-btn search-form__input-btn--add" id="adult__input-btn--add" name="adult__input-btn--add">
               <svg class="search-form__input-btn--add-img" width="11" height="11" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd" d="M4.23 6.77V11h2.54V6.77H11V4.23H6.77V0H4.23v4.23H0v2.54h4.23z" fill="#A9A9A9"/>
@@ -188,7 +188,7 @@
       </section>
     </footer>
   </div>
-  <script src="js/script.min.js"></script>
+  <script src="js/script.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDVO0jnpeT5nMOzS9LEG1srk2lchp4LMug&callback=mainMap" async defer></script>
 </body>
 
