--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
           <p class="search-form__item">
             <label for="search-form__check-in-date">Дата заезда:</label>
             <input id="search-form__check-in-date" type="text" name="date-check-in" placeholder="24 апреля 2017">
-            <button type="button" class="search-form__calendar" id="search-form__calendar--check-in" name="search-form__calendar--check-in">
-              <svg class="search-form__calendar-img" width="21" height="23" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <button type="button" class="search-form__calendar" id="search-form__calendar--check-in" name="search-form__calendar--check-in" aria-label="календарь">
+              <svg class="search-form__calendar-img" width="21" height="23" aria-hidden="true" focusable="false" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd" d="M16.406 3.025h2.845c.966 0 1.749.822 1.749 1.837v16.302C21 22.179 20.217 23 19.251 23H1.75C.784 23 0 22.179 0 21.164V4.862c0-1.015.784-1.837 1.75-1.837h2.843V1.648c0-.381.294-.689.657-.689.362 0 .656.308.656.689v1.377h3.938V1.648c0-.381.294-.689.657-.689.361 0 .655.308.655.689v1.377h3.938V1.648c0-.381.293-.689.656-.689.362 0 .656.308.656.689v1.377zm3.159 18.459a.448.448 0 00.123-.32h.001V4.862a.449.449 0 00-.437-.459h-2.845v1.378c0 .381-.294.689-.656.689-.363 0-.656-.308-.656-.689V4.403h-3.938v1.378c0 .381-.294.689-.655.689-.363 0-.657-.308-.657-.689V4.403H5.907v1.378c0 .381-.294.689-.656.689-.363 0-.657-.308-.657-.689V4.403H1.75a.45.45 0 00-.438.459v16.302a.45.45 0 00.438.459h17.501a.448.448 0 00.314-.139z" fill="#A9A9A9"/>
                 <path fill-rule="evenodd" clip-rule="evenodd" d="M4.594 9.225h2.625v2.066H4.594V9.225zm0 3.443h2.625v2.067H4.594v-2.067zm2.625 3.444H4.594v2.066h2.625v-2.066zm1.969 0h2.625v2.066H9.188v-2.066zm2.625-3.444H9.188v2.067h2.625v-2.067zM9.188 9.225h2.625v2.066H9.188V9.225zm7.218 6.887h-2.625v2.066h2.625v-2.066zm-2.625-3.444h2.625v2.067h-2.625v-2.067zm2.625-3.443h-2.625v2.066h2.625V9.225z"/>
               </svg>
@@ -101,8 +101,8 @@
           <p class="search-form__item">
             <label for="search-form__check-out-date">Дата выезда:</label>
             <input id="search-form__check-out-date" type="text" name="date-check-out" placeholder="4 июля 2017">
-            <button type="button" class="search-form__calendar" id="search-form__calendar--check-out" name="search-form__calendar--check-out">
-              <svg class="search-form__calendar-img" width="21" height="23" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <button type="button" class="search-form__calendar" id="search-form__calendar--check-out" name="search-form__calendar--check-out" aria-label="календарь">
+              <svg class="search-form__calendar-img" width="21" height="23" aria-hidden="true" focusable="false" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd" d="M16.406 3.025h2.845c.966 0 1.749.822 1.749 1.837v16.302C21 22.179 20.217 23 19.251 23H1.75C.784 23 0 22.179 0 21.164V4.862c0-1.015.784-1.837 1.75-1.837h2.843V1.648c0-.381.294-.689.657-.689.362 0 .656.308.656.689v1.377h3.938V1.648c0-.381.294-.689.657-.689.361 0 .655.308.655.689v1.377h3.938V1.648c0-.381.293-.689.656-.689.362 0 .656.308.656.689v1.377zm3.159 18.459a.448.448 0 00.123-.32h.001V4.862a.449.449 0 00-.437-.459h-2.845v1.378c0 .381-.294.689-.656.689-.363 0-.656-.308-.656-.689V4.403h-3.938v1.378c0 .381-.294.689-.655.689-.363 0-.657-.308-.657-.689V4.403H5.907v1.378c0 .381-.294.689-.656.689-.363 0-.657-.308-.657-.689V4.403H1.75a.45.45 0 00-.438.459v16.302a.45.45 0 00.438.459h17.501a.448.448 0 00.314-.139z" fill="#A9A9A9"/>
                 <path fill-rule="evenodd" clip-rule="evenodd" d="M4.594 9.225h2.625v2.066H4.594V9.225zm0 3.443h2.625v2.067H4.594v-2.067zm2.625 3.444H4.594v2.066h2.625v-2.066zm1.969 0h2.625v2.066H9.188v-2.066zm2.625-3.444H9.188v2.067h2.625v-2.067zM9.188 9.225h2.625v2.066H9.188V9.225zm7.218 6.887h-2.625v2.066h2.625v-2.066zm-2.625-3.444h2.625v2.067h-2.625v-2.067zm2.625-3.443h-2.625v2.066h2.625V9.225z"/>
               </svg>
@@ -110,24 +110,24 @@
           </p>
           <p class="search-form__item search-form__item--left">
             <label for="search-form__adults">Взрослые:</label>
-            <button type="button" class="search-form__input-btn search-form__input-btn--sub" id="adult__input-btn--sub" name="adult__input-btn--sub">
+            <button type="button" class="search-form__input-btn search-form__input-btn--sub" id="adult__input-btn--sub" name="adult__input-btn--sub" aria-label="уменьшить">
               <span class="search-form__input-btn--sub-img"></span>
             </button>
             <input id="search-form__adults" type="number" name="adults" min="1" value="2">
-            <button type="button" class="search-form__input-btn search-form__input-btn--add" id="adult__input-btn--add" name="adult__input-btn--add">
-              <svg class="search-form__input-btn--add-img" width="11" height="11" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <button type="button" class="search-form__input-btn search-form__input-btn--add" id="adult__input-btn--add" name="adult__input-btn--add" aria-label="увеличить">
+              <svg class="search-form__input-btn--add-img" width="11" height="11" aria-hidden="true" focusable="false" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd" d="M4.23 6.77V11h2.54V6.77H11V4.23H6.77V0H4.23v4.23H0v2.54h4.23z" fill="#A9A9A9"/>
               </svg>
             </button>
           </p>
           <p class="search-form__item search-form__item--right">
             <label for="search-form__children">Дети:</label>
-            <button type="button" class="search-form__input-btn search-form__input-btn--sub" id="children__input-btn--sub" name="children__input-btn--sub">
+            <button type="button" class="search-form__input-btn search-form__input-btn--sub" id="children__input-btn--sub" name="children__input-btn--sub" aria-label="уменьшить">
               <span class="search-form__input-btn--sub-img" ></span>
             </button>
             <input id="search-form__children" type="number" name="children" min="0" value="0">
-            <button type="button" class="search-form__input-btn search-form__input-btn--add" id="children__input-btn--add" name="children__input-btn--add">
-              <svg class="search-form__input-btn--add-img" width="11" height="11" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <button type="button" class="search-form__input-btn search-form__input-btn--add" id="children__input-btn--add" name="children__input-btn--add" aria-label="увеличить">
+              <svg class="search-form__input-btn--add-img" width="11" height="11" aria-hidden="true" focusable="false" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd" d="M4.23 6.77V11h2.54V6.77H11V4.23H6.77V0H4.23v4.23H0v2.54h4.23z" fill="#A9A9A9"/>
               </svg>
             </button>
