--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Седона</title>
   <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" type="text/css" rel="stylesheet">
   <link href="css/normalize.css" type="text/css" rel="stylesheet">
-  <link href="css/style.css" type="text/css" rel="stylesheet">
+  <link href="css/style.min.css" type="text/css" rel="stylesheet">
 </head>
 
 <body class="page-body">
@@ -188,7 +188,7 @@
       </section>
     </footer>
   </div>
-  <script src="js/script.js"></script>
+  <script src="js/script.min.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDVO0jnpeT5nMOzS9LEG1srk2lchp4LMug&callback=mainMap" async defer></script>
 </body>
 
