исправлен размер кнопки, чтобы можно было легко попасть мышкой

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <input id="search-form__adults" type="number" name="adults" min="1" value="2">
             <button type="button" class="search-form__input-btn search-form__input-btn--add" id="adult__input-btn--add" name="adult__input-btn--add" aria-label="увеличить">
               <svg class="search-form__input-btn--add-img" width="11" height="11" aria-hidden="true" focusable="false" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path fill-rule="evenodd" clip-rule="evenodd" d="M4.23 6.77V11h2.54V6.77H11V4.23H6.77V0H4.23v4.23H0v2.54h4.23z" fill="#A9A9A9"/>
+                <path class="search-form__input-btn--add-svg-path" fill-rule="evenodd" clip-rule="evenodd" d="M4.23 6.77V11h2.54V6.77H11V4.23H6.77V0H4.23v4.23H0v2.54h4.23z" fill="#A9A9A9"/>
               </svg>
             </button>
           </p>
@@ -128,7 +128,7 @@
             <input id="search-form__children" type="number" name="children" min="0" value="0">
             <button type="button" class="search-form__input-btn search-form__input-btn--add" id="children__input-btn--add" name="children__input-btn--add" aria-label="увеличить">
               <svg class="search-form__input-btn--add-img" width="11" height="11" aria-hidden="true" focusable="false" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path fill-rule="evenodd" clip-rule="evenodd" d="M4.23 6.77V11h2.54V6.77H11V4.23H6.77V0H4.23v4.23H0v2.54h4.23z" fill="#A9A9A9"/>
+                <path class="search-form__input-btn--add-svg-path" fill-rule="evenodd" clip-rule="evenodd" d="M4.23 6.77V11h2.54V6.77H11V4.23H6.77V0H4.23v4.23H0v2.54h4.23z" fill="#A9A9A9"/>
               </svg>
             </button>
           </p>
