--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Седона</title>
   <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" type="text/css" rel="stylesheet">
   <link href="css/normalize.css" type="text/css" rel="stylesheet">
-  <link href="css/style.css" type="text/css" rel="stylesheet">
+  <link href="css/style.min.css" type="text/css" rel="stylesheet">
 </head>
 
 <body class="page-body">
